crates/core/tests/ui/ep_missing_key.stderr
error: `#[batpak(...)]` requires `type_id = N`
 --> tests/ui/ep_missing_key.rs:6:1
  |
6 | #[batpak(category = 1)]
  | ^
